<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.companion.locationapp.LoginActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:text="@string/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:id="@+id/title"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameLayout"
            android:layout_below="@id/title">
            <EditText
                android:inputType="text"
                android:hint="@string/username_hint"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="44dp"
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout"
            android:layout_below="@id/usernameLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="44dp"
                android:id="@+id/passwordField"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/signup_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup"
            android:background="@color/colorAccent"
            android:layout_below="@id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <Button
            android:text="@string/signin_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signin"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:layout_below="@+id/signup"
            android:layout_alignEnd="@+id/title" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>